--- a/user/agreement.html
+++ b/user/agreement.html
@@ -16,14 +16,14 @@ body{ color: #555555; font-size: 12px; font-family:Tahoma, Geneva, sans-serif, A
         <h3>服务条款</h3>
       </div>
       <div class="content"> <p>一、总则</p>
-        <p>1.1 彩虹易支付的所有权和运营权归彩虹网络技术有限公司所有。</p>
-        <p>1.2 用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与彩虹易支付之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。</p>
-        <p>1.3 本协议则可由彩虹易支付随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分。</p>
+        <p>1.1 易支付的所有权和运营权归彩虹网络技术有限公司所有。</p>
+        <p>1.2 用户在注册之前，应当仔细阅读本协议，并同意遵守本协议后方可成为注册用户。一旦注册成功，则用户与易支付之间自动形成协议关系，用户应当受本协议的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。</p>
+        <p>1.3 本协议则可由易支付随时更新，用户应当及时关注并同意本站不承担通知义务。本站的通知、公告、声明或其它类似内容是本协议的一部分。</p>
         <p>二、服务内容</p>
-        <p>2.1 彩虹易支付的具体内容由本站根据实际情况提供。</p>
+        <p>2.1 易支付的具体内容由本站根据实际情况提供。</p>
         <p>2.2 本站仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。</p>
         <p>三、用户账号 </p>
-        <p>3.1 经本站注册系统完成注册程序并通过身份认证的用户即成为正式用户，可以获得本站规定用户所应享有的一切权限；未经认证仅享有本站规定的部分会员权限。彩虹易支付有权对会员的权限设计进行变更。</p>
+        <p>3.1 经本站注册系统完成注册程序并通过身份认证的用户即成为正式用户，可以获得本站规定用户所应享有的一切权限；未经认证仅享有本站规定的部分会员权限。易支付有权对会员的权限设计进行变更。</p>
         <p>3.2 用户只能按照注册要求使用真实姓名，及身份证号注册。用户有义务保证密码和账号的安全，用户利用该密码和账号所进行的一切活动引起的任何损失或损害，由用户自行承担全部责任，本站不承担任何责任。如用户发现账号遭到未授权的使用或发生其他任何安全问题，应立即修改账号密码并妥善保管，如有必要，请通知本站。因黑客行为或用户的保管疏忽导致账号非法使用，本站不承担任何责任。</p>
         <p>四、使用规则</p>
         <p>4.1 遵守中华人民共和国相关法律法规，包括但不限于《中华人民共和国计算机信息系统安全保护条例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《全国人大常委会关于维护互联网安全的决定》、《互联网电子公告服务管理规定》、《互联网新闻信息服务管理规定》、《互联网著作权行政保护办法》和《信息网络传播权保护条例》等有关计算机互联网规定和知识产权的法律和法规、实施办法。 </p>
@@ -58,12 +58,12 @@ body{ color: #555555; font-size: 12px; font-family:Tahoma, Geneva, sans-serif, A
         <p>六、版权声明</p>
         <p>6.1 本站的文字、图片、音频、视频等版权均归彩虹网络技术有限公司享有或与作者共同享有，未经本站许可，不得任意转载。</p>
         <p>6.2 本站特有的标识、版面设计、编排方式等版权均属彩虹网络技术有限公司享有，未经本站许可，不得任意复制或转载。</p>
-        <p>6.3 使用本站的任何内容均应注明“来源于彩虹易支付”及署上作者姓名，按法律规定需要支付稿酬的，应当通知本站及作者及支付稿酬，并独立承担一切法律责任。</p>
+        <p>6.3 使用本站的任何内容均应注明“来源于易支付”及署上作者姓名，按法律规定需要支付稿酬的，应当通知本站及作者及支付稿酬，并独立承担一切法律责任。</p>
         <p>6.4 本站享有所有作品用于其它用途的优先权，包括但不限于网站、电子杂志、平面出版等，但在使用前会通知作者，并按同行业的标准支付稿酬。 </p>
         <p>6.5 本站所有内容仅代表作者自己的立场和观点，与本站无关，由作者本人承担一切法律责任。 </p>
         <p>6.6 恶意转载本站内容的，本站保留将其诉诸法律的权利。 </p>
         <p>七、责任声明 </p>
-        <p>7.1 用户明确同意其使用本站网络服务所存在的风险及一切后果将完全由用户本人承担，彩虹易支付对此不承担任何责任。 </p>
+        <p>7.1 用户明确同意其使用本站网络服务所存在的风险及一切后果将完全由用户本人承担，易支付对此不承担任何责任。 </p>
         <p>7.2 本站无法保证网络服务一定能满足用户的要求，也不保证网络服务的及时性、安全性、准确性。 </p>
         <p>7.3 本站不保证为方便用户而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由本站实际控制的任何网页上的内容，本站不承担任何责任。</p>
         <p>7.4 对于因不可抗力或本站不能控制的原因造成的网络服务中断或其它缺陷，本站不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。 </p>
